Fixed #1 (Intro text overlaps photo on 1200px-1400px)

--- a/css/shannonvturner.css
+++ b/css/shannonvturner.css
@@ -55,6 +55,13 @@
     border-radius: 6px;
 }
 
+@media only screen and (max-width: 1400px) and (min-width: 1200px) {
+    .teal-jumbo {
+        padding-left: 0px !important;
+        padding-right: 15px !important;
+    }
+}
+
 .social-row {
     margin-top: 2.5em;
 }
